--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,7 @@ html(lang='fr',ng-app="morpionbattle")
         link(rel='stylesheet', href='/static/css/master.css')
         link(rel='stylesheet', href='/static/css/generic/form.css')
         link(rel='stylesheet', href='/static/css/ngAnimation.css')
+        link(rel='stylesheet', href='/static/css/authentification.css')
         script(src="/static/lib/socket.io.js",defer)
         script(src="/static/lib/angular.min.js",defer)
         script(src="/static/lib/angular-animate.min.js",defer)
@@ -19,5 +20,6 @@ html(lang='fr',ng-app="morpionbattle")
         script(src="/static/js/directives/nginput.js",defer)
         script(src="/static/js/controller/router.js",defer)
         script(src="/static/js/controller/main.js",defer)
+        script(src="/static/js/controller/authentification.js",defer)
     body(ng-controller="layoutController")
         section(class="view",id="ngView",ng-view)
