--- a/static/css/master.css
+++ b/static/css/master.css
@@ -11,7 +11,7 @@ body {
     font-size: 16px;
 }
 
-ul, li, h1, h2, h3, h4, h5, h6, span, p {
+body, html, ul, li, h1, h2, h3, h4, h5, h6, span, p, section {
     margin: 0;
     padding: 0;
 }
@@ -29,53 +29,12 @@ pre.ng-binding {
     margin: 20px;
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-    border-radius: 4px;
-    -webkit-appearance: none;
-}
-::-webkit-scrollbar-track-piece {
-	background: transparent none;
-	border: solid 4px transparent;
-	border-right-width: 8px;
-	margin: 4px;
-}
-::-webkit-scrollbar-track-piece:horizontal {
-	border-right-width: 4px;
-	border-bottom-width: 8px;
-}
-::-webkit-scrollbar-thumb {
-	border: solid 0 transparent;
-    background-clip: content-box;
-	border-right-width: 4px;
-	-webkit-border-radius: 5px;
-	-webkit-border-top-right-radius: 9px 5px;
-	-webkit-border-bottom-right-radius: 9px 5px;
-	-webkit-box-shadow: inset 0 0 0 1px rgb(176,162,230), inset 0 0 0 6px rgb(176,162,230);
-	-webkit-box-shadow: inset 0 0 0 1px rgb(245,245,245), inset 0 0 0 6px rgb(245,245,245);
-}
-::-webkit-scrollbar-thumb:hover {
-	-webkit-box-shadow: inset 0 0 0 1px rgb(245,245,245), inset 0 0 0 6px rgb(245,245,245);
-	-webkit-box-shadow: inset 0 0 0 1px #ded9f4, inset 0 0 0 6px #ded9f4;
-}
-::-webkit-scrollbar-thumb:horizontal {
-	border-right-width: 0;
-	border-bottom-width: 4px;
-	-webkit-border-top-right-radius: 5px;
-	-webkit-border-bottom-right-radius: 5px 9px;
-	-webkit-border-bottom-left-radius: 5px 9px;
-}
-
-canvas#canvasRenderer {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    z-index: 0;
-    left: 0;
-    top: 0;
-    opacity: 0.05;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    will-change: filter;
+#ngView {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: Roboto;
 }
