Update graphic and add lobby design

--- a/static/css/generic/form.css
+++ b/static/css/generic/form.css
@@ -6,6 +6,11 @@ input {
     outline: none;
 }
 
+button {
+    border: 2px solid #EEE;
+    outline: none;
+}
+
 form .field {
     position: relative;
     padding: 8px 0;
