--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html(lang='fr',ng-app="morpionbattle")
     head
         title MorpionBattle
         link(rel='stylesheet', href='/static/fonts/Roboto.css')
+        link(rel='stylesheet', href='/static/fonts/Exo.css')
         link(rel='stylesheet', href='/static/lib/font-awesome.css')
         link(rel='stylesheet', href='/static/lib/animate.css')
         link(rel='stylesheet', href='/static/lib/loading-bar.css')
@@ -10,6 +11,7 @@ html(lang='fr',ng-app="morpionbattle")
         link(rel='stylesheet', href='/static/css/generic/form.css')
         link(rel='stylesheet', href='/static/css/ngAnimation.css')
         link(rel='stylesheet', href='/static/css/authentification.css')
+        link(rel='stylesheet', href='/static/css/lobby.css')
         script(src="/static/lib/socket.io.js",defer)
         script(src="/static/lib/angular.min.js",defer)
         script(src="/static/lib/angular-animate.min.js",defer)
