--- a/static/css/authentification.css
+++ b/static/css/authentification.css
@@ -1,10 +1,12 @@
 #ngView > h1 {
-    font-size: 30px;
-    color: #06F;
+    font-size: 40px;
+    color: #3D5AFE;
+    font-variant: small-caps;
 }
 
 #ngView > span {
     font-size: 18px;
+    font-style: italic;
 }
 
 #authentification {
@@ -15,31 +17,30 @@
 }
 
     #authentification h2 {
-        border-bottom: 3px solid #EEE;
+        border-bottom: 1px solid #EEE;
         height: 30px;
         font-family: Roboto;
         display: flex;
         align-items: center;
-        color: #333;
+        color: #3D5AFE;
         font-size: 17px;
     }
 
     #authentification > section {
         display: flex;
         flex-direction: column;
+        border: 2px solid #CCC;
+        border-radius: 2px;
+        background: #FFF;
+        padding: 10px;
     }
 
     #authentification > .register {
-        margin-right: 30px;
+        margin-right: 15px;
         flex-grow: 1;
     }
 
-    #authentification > .separation {
-        width: 3px;
-        background: #CCC;
-    }
-
     #authentification > .login {
-        margin-left: 30px;
+        margin-left: 15px;
         flex-grow: 1;
     }
