--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,7 @@ html(lang='fr',ng-app="morpionbattle")
         link(rel='stylesheet', href='/static/css/ngAnimation.css')
         link(rel='stylesheet', href='/static/css/authentification.css')
         link(rel='stylesheet', href='/static/css/lobby.css')
+        link(rel='stylesheet', href='/static/css/popups.css')
         script(src="/static/lib/socket.io.js",defer)
         script(src="/static/lib/angular.min.js",defer)
         script(src="/static/lib/angular-animate.min.js",defer)
@@ -24,4 +25,6 @@ html(lang='fr',ng-app="morpionbattle")
         script(src="/static/js/controller/main.js",defer)
         script(src="/static/js/controller/authentification.js",defer)
     body(ng-controller="layoutController")
+        section.popupAnimation(id="popupContainer",ng-show="popupOpen === true")
+            section.animationInclude(class="popup",ng-include="getPopup()")
         section(class="view",id="ngView",ng-view)
