--- a/static/css/generic/form.css
+++ b/static/css/generic/form.css
@@ -6,11 +6,6 @@ input {
     outline: none;
 }
 
-button {
-    border: 2px solid #EEE;
-    outline: none;
-}
-
 form .field {
     position: relative;
     padding: 8px 0;
@@ -37,27 +32,28 @@ form .field::after {
 }
 
     form input[type="submit"] {
-        border: none;
-        height: 30px;
-        padding: 0 20px;
-        margin-left: auto;
-        margin-top: 20px;
+        border: 3px solid #78909C;
+        background: rgb(238,238,238); /* Old browsers */
+        background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+        width: 120px;
         border-radius: 2px;
-        box-shadow: 1px 1px 2px #EEE;
-        text-shadow: 1px 1px 6px rgba(20,20,20,0.4);
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: bold;
+        color: #455A64;
+        height: 40px;
     }
-        form input[type="submit"]:not(.disabled) {
-            background: #039BE5;
-            color: #FFF;
+        form input[type="submit"]:not(.disabled):hover {
+            border-color: #3D5AFE;
+            color: #3D5AFE;
             cursor: pointer;
-            transition: all 0.2s linear;
         }
-            form input[type="submit"]:not(.disabled):hover {
-                background: #8BC34A;
-            }
+
         form input[type="submit"].disabled {
-            background: #666;
-            color: #E1E1E1;
+            opacity: 0.4;
         }
 
     /* Has label style */
@@ -159,3 +155,9 @@ form .field::after {
             margin-left: auto;
             color: #E0E0E0;
         }
+
+    form .field-center {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
