--- a/static/css/master.css
+++ b/static/css/master.css
@@ -43,4 +43,35 @@ pre.ng-binding {
     justify-content: center;
     flex-direction: column;
     font-family: Roboto;
+    z-index: 1;
+    position: relative;
 }
+
+button {
+    border: 3px solid #78909C;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,cccccc+100;Gren+3D */
+    background: rgb(238,238,238); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+    width: 120px;
+    border-radius: 2px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: bold;
+    color: #455A64;
+}
+    button.red {
+        border-color: #E53935;
+        color: #E53935;
+        cursor: pointer;
+    }
+    button.inactive {
+        opacity: 0.4;
+    }
+    button:not(.inactive):not(.red):hover {
+        border-color: #3D5AFE;
+        color: #3D5AFE;
+        cursor: pointer;
+    }
