--- a/views/game.pug
+++ b/views/game.pug
@@ -1,1 +1,8 @@
-h1 Game
+section(id="game")
+    header
+    main
+        aside
+            section.player
+            section.player
+            section.player
+        section(class="morpion")
