--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,7 @@ html(lang='fr',ng-app="morpionbattle")
         link(rel='stylesheet', href='/static/css/authentification.css')
         link(rel='stylesheet', href='/static/css/lobby.css')
         link(rel='stylesheet', href='/static/css/popups.css')
+        link(rel='stylesheet', href='/static/css/game.css')
         script(src="/static/lib/socket.io.js",defer)
         script(src="/static/lib/angular.min.js",defer)
         script(src="/static/lib/angular-animate.min.js",defer)
