--- a/static/css/generic/form.css
+++ b/static/css/generic/form.css
@@ -6,6 +6,21 @@ input {
     outline: none;
 }
 
+section.flash {
+    height: 35px;
+    background: #FF9800;
+    border-radius: 2px;
+    text-shadow: 1px 1px 2px rgba(20,20,20,0.5);
+    color: #FFF;
+    padding: 0 10px;
+    margin: 10px 0;
+    display: flex;
+    align-items: center;
+}
+    section.flash > i {
+        margin-right: 10px;
+    }
+
 form .field {
     position: relative;
     padding: 8px 0;
