--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,11 +21,13 @@ html(lang='fr',ng-app="morpionbattle")
         script(src="/static/lib/angular-route.min.js",defer)
         script(src="/static/lib/loading-bar.js",defer)
         script(src="/static/js/factory/socket.js",defer)
+        script(src="/static/js/factory/popup.js",defer)
         script(src="/static/js/directives/nginput.js",defer)
         script(src="/static/js/controller/router.js",defer)
         script(src="/static/js/controller/main.js",defer)
+        script(src="/static/js/controller/popups.js",defer)
         script(src="/static/js/controller/authentification.js",defer)
-    body(ng-controller="layoutController")
-        section.popupAnimation(id="popupContainer",ng-show="popupOpen === true")
-            section.animationInclude(class="popup",ng-include="getPopup()")
-        section(class="view",id="ngView",ng-view)
+    body(ng-controller="ControllerLayout as Layout")
+        section.popupAnimation#popupContainer(ng-show="Layout.popup.open === true")
+            section.animationInclude.popup(ng-include="Layout.popup.getTemplate()")
+        section.view#ngView(ng-view)
