--- a/views/popups/creategame.pug
+++ b/views/popups/creategame.pug
@@ -1,5 +1,5 @@
 h1 Create game
-form(name="creategame",ng-controller="createGameController",ng-submit="submit()",novalidate,style="align-items: center")
+form(name="creategame",ng-controller="createGameController",ng-submit="submit(Layout.popup)",novalidate,style="align-items: center")
     nginput(
         ng-model="formData.gameName",
         name="gameName",
